--- a/afs-test-task/src/components/shared/SideBar/SideBar.module.css
+++ b/afs-test-task/src/components/shared/SideBar/SideBar.module.css
@@ -1,11 +1,13 @@
 .sidebar {
   background-color: white;
-  width: 250px;
+  min-width: 250px;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.08);
 }
+
 
 .sidebar_buttons {
   display: flex;
