--- a/afs-test-task/src/index.css
+++ b/afs-test-task/src/index.css
@@ -7,12 +7,20 @@
   font-family: 'Poppins', sans-serif;
 }
 
-.main{
+.root_container{
+  display: flex;
   min-height: 100vh;
+  width: 100%;
 }
+
+.main{
+  min-height: 100%;
+  width: 100%;
+}
+
 
 .home{
   width: 100%;
-  min-height: 100vh;
+  min-height: 100%;
   display: flex; 
 }
